[package]
name = "isuuc"
version = "0.1.0"
authors = ["Valerian <dogecoin.fraud@gmail.com>, Juan, Alexis"]

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
tiled = "0.7.2"
rand = "0.5.4"
bincode = "1.0.1"
serde_derive = "1.0.70"
serde = "1.0.70"